# slicotpp

./: .gitignore  .gitmodules  CMakeLists.txt  IB01BD - расчет.txt  README.RU.md  README.md
.github/workflows/: cmake-single-platform.yml
include/vlasovdl/: f_matrix.hpp  slicot.h  slicot_.h  slicotpp.hpp
include/vlasovdl/slicotpp/: ib01.hpp
src/: CMakeLists.txt  ib01.cpp  ib01ad_sizes.f90  ib01ad_space.f90  ib01bd_sizes.f90  ib01bd_space.f90  ib01cd_minsmp.f90  ib01cd_sizes.f90  ib01cd_space.f90  noop.cpp
test/: CMakeLists.txt  f_matrix.test.cpp  ib01.tools.cpp  ib01.tools.hpp  ib01ad.test.cpp  ib01ad.test.inp  ib01ad_sizes.f90  ib01ad_space.f90  ib01bd.test.cpp  ib01bd_sizes.f90  ib01bd_space.f90  ib01bd_ws.f90  ib01cd.test.cpp  ib01cd_sizes.f90  id01ad.test.data.txt  read_identification_data.cpp  read_identification_data.hpp
